<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".view.activity.RegisterActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/register"
        android:layout_margin="15dp"
        android:gravity="center"
        android:textColor="@color/cream"
        android:fontFamily="@font/poppins_700"
        android:textSize="40sp"
        android:layout_above="@id/mainCard"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/mainCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:cardCornerRadius="15dp"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_marginHorizontal="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_person"
                        android:adjustViewBounds="true" />
                    <EditText
                        android:id="@+id/inputName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:gravity="center|start"
                        android:layout_weight="1"
                        android:background="@null"
                        android:inputType="textPersonName"
                        android:fontFamily="@font/poppins_500"
                        android:singleLine="true"
                        android:textSize="14sp"
                        android:hint="@string/hint_name"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/nameError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="10dp"
                android:textSize="12sp"
                android:textColor="@color/red"
                android:text="@string/name_cannot_empty"
                android:visibility="gone"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_marginHorizontal="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_email"
                        android:adjustViewBounds="true" />
                    <EditText
                        android:id="@+id/inputEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:gravity="center|start"
                        android:layout_weight="1"
                        android:background="@null"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/poppins_500"
                        android:singleLine="true"
                        android:textSize="14sp"
                        android:hint="@string/hint_email"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/emailError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="10dp"
                android:textSize="12sp"
                android:textColor="@color/red"
                android:text="@string/email_cannot_empty"
                android:visibility="gone"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="2dp"
                        android:src="@drawable/ic_lock" />

                    <EditText
                        android:id="@+id/inputPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:gravity="center|start"
                        android:layout_weight="1"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:fontFamily="@font/poppins_500"
                        android:singleLine="true"
                        android:textSize="14sp"
                        android:hint="@string/hint_password"
                        />
                    <ImageView
                        android:id="@+id/visibilityPassword"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_visibility_off" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/passwordError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="10dp"
                android:textSize="12sp"
                android:textColor="@color/red"
                android:text="@string/password_cannot_empty"
                android:visibility="gone"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="2dp"
                        android:src="@drawable/ic_lock" />

                    <EditText
                        android:id="@+id/inputConfirmPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:gravity="center|start"
                        android:layout_weight="1"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:fontFamily="@font/poppins_500"
                        android:textColor="@color/black"
                        android:singleLine="true"
                        android:textSize="14sp"
                        android:hint="@string/hint_confirm_password"
                        />
                    <ImageView
                        android:id="@+id/visibilityConfirmPassword"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_visibility_off" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/confirmPasswordError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="10dp"
                android:textSize="12sp"
                android:textColor="@color/red"
                android:text="@string/password_cannot_empty"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/entryPointContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="13sp"
                    android:text="@string/entry_point_login"/>
                <TextView
                    android:id="@+id/entryPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textSize="13sp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/poppins_600"
                    android:textColor="@color/cream"/>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                android:layout_marginTop="20dp"
                app:cardElevation="1dp"
                android:layout_marginBottom="2dp"
                android:layout_marginHorizontal="10dp"
                app:cardBackgroundColor="@color/cream">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="12dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/register"
                    android:textColor="?attr/backgroundColor"
                    android:fontFamily="@font/poppins_700"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>